{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 8,
  "lineage": "43e507d7-f58e-be0d-cdc0-66003a3d2234",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858633162811:vpc/vpc-0e57f16381ab5ef12",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0a4cfbd8c223b0bb0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0b39fec6b7e358360",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e57f16381ab5ef12",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a589602c49dba998",
            "owner_id": "858633162811"
          }
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858633162811:security-group/sg-074fd18a73d2069c9",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-074fd18a73d2069c9",
            "ingress": [],
            "name": "ec2_sg-20250227034049355000000002",
            "name_prefix": "ec2_sg-",
            "owner_id": "858633162811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e57f16381ab5ef12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "127.0.0.1/32"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2140769220",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-074fd18a73d2069c9",
            "security_group_rule_id": "sgr-0c26e141f0e866de0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.dev_ssh_sg.aws_security_group.this",
            "module.dev_ssh_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.dev_ssh_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:858633162811:security-group/sg-04c9ad58bc3d05256",
            "description": "Security group for ec2_sg",
            "egress": [],
            "id": "sg-04c9ad58bc3d05256",
            "ingress": [],
            "name": "ec2_sg-20250227034049354700000001",
            "name_prefix": "ec2_sg-",
            "owner_id": "858633162811",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0e57f16381ab5ef12"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-567552151",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04c9ad58bc3d05256",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-3993552105",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04c9ad58bc3d05256",
            "security_group_rule_id": "sgr-06e95a933aa294555",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default",
            "module.ec2_sg.aws_security_group.this",
            "module.ec2_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}